<resources>
    <string name="app_name">Tugas2_1</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="di">DI</string>
    <string name="universitas_muhammadiyah_banjarmasin">UNIVERSITAS MUHAMMADIYAH BANJARMASIN</string>
    <string name="muhammad_ubaidillah_2155201110003">MUHAMMAD UBAIDILLAH (2155201110003)</string>
    <string name="yulisa_suryana_2155201110029">YULISA SURYANA (2155201110029)</string>
    <string name="start">START</string>
</resources>